--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
     <div class="page-info h-100">
         <div class="container h-100">
             <div class="row align-items-center h-100 who-we-are">
-                <div class="">
+                <div class="who-we-are">
                     <h1 class="green h1">Who We Are</h1>
                     <p class="pt-3">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita
                         at voluptas
@@ -25,138 +25,29 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <h1 class="green h1"><i class="fa-solid fa-space-shuttle" ></i> Mission</h1>
+                        <h1 class="green h1"><i class="fa-solid fa-space-shuttle"></i> Mission</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.</p>
                     </div>
                     <div class="col-md-4">
-                        <h1 class="green h1"><i class="fa-regular fa-eye" ></i> Vision</h1>
+                        <h1 class="green h1"><i class="fa-regular fa-eye"></i> Vision</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.</p>
                     </div>
                     <div class="col-md-4">
-                        <h1 class="green h1"><i class="fa-regular fa-handshake" ></i> Values</h1>
+                        <h1 class="green h1"><i class="fa-regular fa-handshake"></i> Values</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.</p>
                     </div>
                 </div>
-            </div>
-            <!--div class="testimonials">
-                <h1 class="green h1">Testimonials</h1>
-                <div class="testimony">
-                    <div class="ight">
-                        <div class="active-review-carusel owl-carousel owl-theme owl-loaded">                                                       
-                        <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-2160px, 0px, 0px); transition: all 0.25s ease 0s; width: 5040px;"><div class="owl-item cloned" style="width: 690px; margin-right: 30px;"><div class="single-feedback-carusel">
-                                <div class="title d-flex flex-row">
-                                    <h4 class="pb-10">Fannie Rowe</h4>
-                                    <div class="star">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>								
-                                    </div>										
-                                </div>
-                                <p>
-                                    Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-                                </p>
-                            </div></div><div class="owl-item cloned" style="width: 690px; margin-right: 30px;"><div class="single-feedback-carusel">
-                                <div class="title d-flex flex-row">
-                                    <h4 class="pb-10">Fannie Rowe</h4>
-                                    <div class="star">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked	"></span>								
-                                    </div>										
-                                </div>
-                                <p>
-                                    Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-                                </p>
-                            </div></div><div class="owl-item" style="width: 690px; margin-right: 30px;"><div class="single-feedback-carusel">
-                                <div class="title d-flex flex-row">
-                                    <h4 class="pb-10">Fannie Rowe</h4>
-                                    <div class="star">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
-                                        <span class="fa fa-star"></span>								
-                                    </div>										
-                                </div>
-                                <p>
-                                    Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-                                </p>
-                            </div></div><div class="owl-item active" style="width: 690px; margin-right: 30px;"><div class="single-feedback-carusel">
-                                <div class="title d-flex flex-row">
-                                    <h4 class="pb-10">Fannie Rowe</h4>
-                                    <div class="star">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>								
-                                    </div>										
-                                </div>
-                                <p>
-                                    Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-                                </p>
-                            </div></div><div class="owl-item" style="width: 690px; margin-right: 30px;"><div class="single-feedback-carusel">
-                                <div class="title d-flex flex-row">
-                                    <h4 class="pb-10">Fannie Rowe</h4>
-                                    <div class="star">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked	"></span>								
-                                    </div>										
-                                </div>
-                                <p>
-                                    Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-                                </p>
-                            </div></div><div class="owl-item cloned" style="width: 690px; margin-right: 30px;"><div class="single-feedback-carusel">
-                                <div class="title d-flex flex-row">
-                                    <h4 class="pb-10">Fannie Rowe</h4>
-                                    <div class="star">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
-                                        <span class="fa fa-star"></span>								
-                                    </div>										
-                                </div>
-                                <p>
-                                    Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-                                </p>
-                            </div></div><div class="owl-item cloned" style="width: 690px; margin-right: 30px;"><div class="single-feedback-carusel">
-                                <div class="title d-flex flex-row">
-                                    <h4 class="pb-10">Fannie Rowe</h4>
-                                    <div class="star">
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>								
-                                    </div>										
-                                </div>
-                                <p>
-                                    Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-                                </p>
-                            </div></div></div></div><div class="owl-controls"><div class="owl-nav"><div class="owl-prev" style="display: none;">prev</div><div class="owl-next" style="display: none;">next</div></div><div class="owl-dots" style=""><div class="owl-dot"><span></span></div><div class="owl-dot active"><span></span></div><div class="owl-dot"><span></span></div></div></div></div>
+                <footer class="text-center">
+                    <div class="copyright">
+                        © Copyright <strong><span>Mac & Co</span></strong>. All Rights Reserved
                     </div>
-                </div>
+                    <div class="credits font-monospace">Developed by <a href="allankayz.co.zw"><img src=""
+                                style="width: 20px; height: 20px;" alt="Allan Kayz"></a></div>
+                </footer>
             </div>
-            <div class="getintouch">
-
-            </div-->
-            <footer class="footer text-center">
-                <div class="copyright">
-                    © Copyright <strong><span>Mac & Co</span></strong>. All Rights Reserved
-                </div>
-                <div class="credits font-monospace">Developed by <a href="allankayz.co.zw"><img src="" style="width: 20px; height: 20px;" alt="Allan Kayz"></a></div>
-            </footer>
         </div>
     </div>
 </body>
