--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
 <body>
     <div class="container">
 
-        <div class="row pt-5">
+        <div class="row pt-5 pb-5">
             <div class="col-md pt-5">
                 <h2 class="h2 green">Visit Us</h2>
                 <div class="mt-5">
@@ -22,12 +22,12 @@
                 </div>
                 <div class="socials">
                     <div class="pt-2">
-                        <a href="" id="X(formerlytwitter)"><i class="fa fa-twitter"></i></a>
-                        <a href="" id="facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="" id="instagram"><i class="fa fa-instagram"></i></a>
+                        <a href="" class="px-2" id="X(formerlytwitter)"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="" class="px-2" id="facebook"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="" class="px-2" id="instagram"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                     <div class="whatsapp pt-3">
-                        <button type="button" class="btn btn-outline-success">Let's Talk</button>
+                        <button type="button" class="btn btn-outline-success">Let's Talk <i class="fa-brands fa-whatsapp"></i></button>
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
             </div>
         </div>
     </div>
-    <footer class="footer text-center fixed-bottom" style="bottom: 0%;">
+    <footer class="text-center" style="bottom: 0%;">
         <div class="copyright font-monospace small">
             © Copyright <strong><span>Mac & Co</span></strong>. All Rights Reserved
         </div>
